# ai-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  environment.yaml  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yaml
config/: config.yaml
notebooks/: 00_example.ipynb
src/: execution.py
tests/: test_example.py
