[project]
name = "ai-project-template"
version = "2.0.0"
description = "The idea of this project(template) is to have a code framework prepared for any AI/ML/MLOps/LLMOps project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=0.34.2",
    "bitsandbytes>=0.44.0",
    'boto3>=1.35.29',
    "coverage>=7.6.1",
    "datasets>=2.14.4",
    'dvc>=3.55.2',
    'fastapi>=0.115.0',
    'flask>=3.0.3',
    'flwr>=1.11.1',
    'langchain-aws>=0.2.1',
    'langchain-community>=0.3.1',
    'langchain-core>=0.3.6',
    'langchain>=0.3.1',
    'langfuse>=2.51.2',
    'langgraph>=0.2.28',
    'llama-index-core>=0.11.14',
    'llama-index-llms-bedrock>=0.2.1',
    'llama-index>=0.11.14',
    'loguru>=0.7.2',
    'matplotlib>=3.9.2',
    'mlflow>=2.16.2',
    'nltk>=3.9.1',
    'numpy>=1.26.4',
    'ollama>=0.3.3',
    'pandas>=2.2.3',
    "peft>=0.13.0",
    'plotly>=5.24.1',
    'pre-commit>=3.8.0',
    'pydantic>=2.9.2',
    'pyspark>=3.5.3',
    'pytest>=8.3.3',
    'ragas>=0.1.19',
    'requests>=2.32.3',
    "ruff>=0.6.8",
    'sagemaker-mlflow>=0.1.0',
    'sagemaker>=2.75.1',
    'scikit-learn>=1.5.2',
    'scipy>=1.14.1',
    'seaborn>=0.13.2',
    'sentence-transformers>=3.1.1',
    'tensorboard>=2.17.1',
    'tensorflow>=2.17.0',
    'tiktoken>=0.7.0',
    'torch>=2.4.1',
    'torchaudio>=2.4.1',
    'torchvision>=0.19.1',
    'tqdm>=4.66.5',
    'transformers>=4.45.1',
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 90
indent-width = 4

target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

docstring-code-format = true

docstring-code-line-length = "dynamic"
